--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
     "sweetalert2": "^11.10.8",
     "swiper": "^11.1.1"
